--- a/devfile_java.yaml
+++ b/devfile_java.yaml
@@ -14,7 +14,7 @@ components:
  -
   type: dockerimage
   alias: maven
-  image: 'quay.io/grieger/che7-java-maven-oc-odo-ocp4-stack'
+  image: 'quay.io/grieger/che7-java-maven-oc-odo-ocp4-stack:latest'
   env:
    -
     name: MAVEN_CONFIG
