--- a/selinux-collection.yml
+++ b/selinux-collection.yml
@@ -1,12 +1,11 @@
 ---
 - name: Set selinux boolean
   hosts: all
-  #vars:
-   # selinux_policy: targeted
-    #selinux_state: enforcing
   tasks:
-  - name: set SElinux to enforcing  
-    linux-system-roles.selinux:
-      selinux_policy: targeted
-      selinux_state: enforcing
+    - name: Set SELinux to enforcing
+      include_role:
+        name: fedora.linux_system_roles.selinux
+      vars:
+        selinux_state: enforcing
+
  
